<resources>
    <string name="app_name">CryptoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">Not Found any data </string>
    <string name="search_hint">Search Crypto </string>
    <string name="empty_watchlist">Watch list is empty </string>
    <string name="_15m">15 min </string>
    <string name="_1h">1 hour</string>
    <string name="_4h">4 hour</string>
    <string name="_1d">1 day</string>
    <string name="_1w">1 week</string>
    <string name="_1m">1 min</string>

</resources>