<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/dark_blue"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/frameLayout2"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    -<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/detailAppbar"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingBottom="8dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    android:paddingStart="12dp">

    <ImageButton
        android:background="@null"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/addWatchlistButton"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_star_outline"
        android:padding="8dp"/>

    <ImageButton
        android:background="@null"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/backStackButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_back_stack"
        android:padding="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/detailSymbolTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="BTC"
        app:layout_constraintStart_toEndOf="@+id/backStackButton"
        app:layout_constraintEnd_toStartOf="@+id/addWatchlistButton"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    -<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/detailPrice"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingBottom="12dp"
    android:paddingTop="12dp"
    android:paddingStart="16dp"
    app:layout_constraintTop_toBottomOf="@id/detailAppbar">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/detailChangeTextView"
        tools:text="2.68%"
        app:layout_constraintStart_toEndOf="@+id/detailChangeImageView"
        android:textSize="18sp"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/detailPriceTextView"
        android:layout_marginTop="6dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/detailPriceTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="$108.56"
        app:layout_constraintStart_toEndOf="@+id/detailImageView"
        android:textSize="26sp" android:textColor="@color/white"
        android:layout_marginStart="32dp"/>

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/detailChangeImageView"
        app:layout_constraintTop_toTopOf="@+id/detailChangeTextView"
        app:layout_constraintStart_toStartOf="@+id/detailPriceTextView"
        app:layout_constraintBottom_toBottomOf="@+id/detailChangeTextView"
        tools:srcCompat="@drawable/ic_caret_up"/>

    <ImageView
        android:layout_height="64dp"
        android:layout_width="64dp"
        android:id="@+id/detailImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ImageContrastCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    -<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:id="@+id/detailChart"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/detailPrice">

    <androidx.appcompat.widget.AppCompatButton
        android:background="@null"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_1m"
        app:layout_constraintStart_toEndOf="@+id/button1"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@null"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        android:text="@string/_1w"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/active_button"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        android:text="@string/_1d"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@null"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        android:text="@string/_4h"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@null"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        android:text="@string/_1h"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@null"
        android:layout_height="36dp"
        android:layout_width="58dp"
        android:id="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        android:text="15 min"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"/>

    <WebView
        android:layout_height="248dp" android:layout_width="match_parent" android:id="@+id/detaillChartWebView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    -<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/detail_content_bg"
    android:layout_height="0dp"
    android:layout_width="match_parent"
    android:id="@+id/AllDetail"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:paddingStart="12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/detailChart"
    android:layout_marginTop="16dp"
    android:paddingEnd="12dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/detailRecyclerView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>